--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "src/index.ts",
   "scripts": {
-    "start": "ts-node src/index.ts"
+    "exec": "ts-node src/index.ts",
+    "start": "docker-compose up",
+    "stop": "docker-compose down"
   },
   "author": "",
   "license": "ISC",
