--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "@types/node": "^18.0.0",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "@azure/cosmos": "^3.16.4"
   }
 }
